--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ textarea::-webkit-input-placeholder{
 .data__li::after{
     display: inline-block;
     font-weight: 400;
-    content: attr(attr-data);
+    content: attr(id);
 }
 
 /* Finish code garbage */
